# ft_irc

./: .gitignore  CMakeLists.txt  Makefile
channel/: Channel.cpp  Channel.hpp
client/: Makefile  client.cpp
commands/: ACommand.cpp  ACommand.hpp  Invite.cpp  Join.cpp  Kick.cpp  Mode.cpp  Nick.cpp  Notice.cpp  Oper.cpp  Part.cpp  Pass.cpp  Ping.cpp  Privmsg.cpp  Quit.cpp  Topic.cpp  Unoper.cpp  User.cpp  Who.cpp
ex00/: Makefile  Template.hpp  main.cpp
macros/: macros.hpp
most_basic_server/client/: client.cpp
most_basic_server/server/: server.cpp
nobody cares/: Template.cpp  client.cpp  server.cpp
parser/: ACommand.cpp  ACommand.hpp  Cap.cpp  Cnotice.cpp  Cprivmsg.cpp  Info.cpp  Invite.cpp  Join.cpp  Kick.cpp  List.cpp  Mode.cpp  Names.cpp  Nick.cpp  Notice.cpp  Oper.cpp  Part.cpp  Pass.cpp  Ping.cpp  Privmsg.cpp  Quit.cpp  Squit.cpp  Tokenizer.cpp  Tokenizer.hpp  Topic.cpp  Unoper.cpp  User.cpp  Users.cpp  Who.cpp
server/: Client.cpp  Client.hpp  Makefile  Server.cpp  Server.hpp  basic_server  main.cpp  server.cpp  serverUtils.cpp  utils.cpp
testClient/: TestClient.cpp  basic_client
utils/: utils.cpp  utils.hpp
